Hash da senha e validação

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mateusarcedev/api-solid#readme",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.10",
     "eslint": "8.57.1",
     "prisma": "6.5.0",
@@ -28,7 +29,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "@prisma/client": "6.5.0",
+    "@prisma/client": "6.6.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
     "zod": "3.24.2"
