--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.10",
     "@vitest/coverage-v8": "3.1.1",
+    "@vitest/ui": "3.1.1",
     "eslint": "8.57.1",
     "prisma": "6.5.0",
     "tsup": "8.4.0",
