--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.10",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.1.1",
     "@vitest/ui": "3.1.1",
     "eslint": "8.57.1",
     "prisma": "6.5.0",
+    "supertest": "7.1.1",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2",
